--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -15,6 +15,7 @@ body {
 	font-family: 'Fira Sans', sans-serif;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 .app {
@@ -28,7 +29,7 @@ a, a:visited {
 	color: white;
 }
 
-h1, h2 {
+h1, h2, i {
 	text-shadow: 2px 1px 2px rgb(255, 0, 140), -1px 0 1em rgb(0, 102, 255), 0 0 0.2em rgb(0, 255, 89);
 }
 
